Servidor explode de cara com muitas salas; vamos usar Virtual Threads pra evitar isso