@@ -13,8 +13,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
 }
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_19
+    targetCompatibility = JavaVersion.VERSION_19
 }
 
 test {
@@ -29,4 +29,12 @@ tasks.jar {
     from(project(':core').fileTree("build/classes/java/main")) {
         include '**/*.class'
     }
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
+compileJava {
+    options.compilerArgs += ["--enable-preview"]
 }
